# newsletter

./: .env  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  configuration.yaml  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml
migrations/: 20240501110305_add_status_to_subscriptions.sql  20240501112418_make_status_not_null_in_subscriptions.sql  20240502073030_create_subscriptions_tokens_table.sql
scripts/: init_db.bash
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
