[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.11.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.3"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
