[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.11.0"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.3"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
