[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = {version = "0.4", features = ["std"] }
base64 = "0.21"
chrono = "0.4.15"
claim = "0.5"
config = "0.11.0"
once_cell = "1"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14"

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
